--- a/Index.html
+++ b/Index.html
@@ -7,41 +7,159 @@
 	<meta name="keywords" content="Cursos,escuela, tecnico, empresarial, primaria, secundaria, bachillerato, universidad, geometría, cálculo, física, álgebra, programación, java, pascal, mysql photoshop"/>
 	<title>Incio-Escuela profesional del estado de México</title>
 
+
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<script src="http://code.jquery.com/jquery-latest.js" ></script>
+
+	<script src="index.js" ></script>
 </head>
 <body>
 
 	<header id="CabeceraPrincipal">
 		<img src="PortadaIndex.png" width="1300" height="300">
-	</header>
-
-	<nav id="NavegadorPrincipal">
+		<div class ="contain">
+		<nav class="menu">
+		
 		<ul>
-			<li>¿Quiénes somos?</li>
-			<li>Bolsa de trabajo</li>
-			<li>Contactanos</li>
-			<li>Iniciar Sesión</li>
-			<li>Registrate</li>
+			<li> <a href="#"> ¿Quiénes somos?</a></li>
+			<li><a href="#"> Bolsa de trabajo</a></li>
+			<li><a href="#"> Contactanos</a></li>
+			<li><a href="#">Iniciar Sesión</a></li>
+			<li><a href="#">Registrate</a></li>
 		</ul>
+
+
 	</nav>
 
-	<aside id="BarraLateral">
-	<a  class="menu" href="$" >
-		<blockquote>¿Dónde nos ubicamos?</blockquote>
-		<blockquote>Misión</blockquote>
-		<blockquote>Visión</blockquote>
-		<blockquote>Profesores</blockquote>
-		<blockquote>Cursos
-		<ul>
-			<li> <a target="blank" href="google.com.mx/webhp?client=opera&sourceid=opera&ie=UTF-8&oe=UTF-8"> buscador de google</a> </li>
+	</div>
+	</header>
 
-			<li> <a tarjet="blank" href="google.com.mx/webhp?client=opera&sourceid=opera&ie=UTF-8&oe=UTF-8"> Buscador Alpha</a></li>
+	
+	<div class="contenedorMenu">
+
+		<ul class="menuc">
+			<li > <a href="#"><i class="icono iz fa fa-home" aria-hidden="true"></i>¿Dónde nos ubicamos?</a></li>
+			<li> <a href="#"><i class="icono iz fa fa-bookmark" aria-hidden="true"></i> Misión</a> </li>
+			<li> <a href="#"><i class="icono iz fa fa-eye" aria-hidden="true"></i> Visión</a> </li>	
+			<li> <a href="#"><i class="icono iz fa fa-user" aria-hidden="true"></i>Profesores</a> </li>
+			<li class="selection"><a href="#"><i class="icono iz fa fa-book" aria-hidden="true"></i> Cursos<i class="iconod er fa fa-arrow-down" aria-hidden="true"></i></a>
+				<ul>
+					<li><a href="#">Geometría analitica </a> </li>
+					<li><a href="#">Trigonometría </a> </li>
+					<li><a href="#">Algebra </a> </li>
+					<li><a href="#">Calculo Diferencial </a> </li>
+					<li><a href="#">Calculo integral </a> </li>
+					<li><a href="#">Lógica </a> </li>
+					<li><a href="#">Fisica </a> </li>
+					<li><a href="#">Ecuaciones diferenciales </a> </li>
+				</ul>
+
+			 </li>|
+			<li class="selection "><a href="#"><i class="icono iz fa fa-building" aria-hidden="true"></i>Carreras<i class="icono der fa fa-arrow-down" aria-hidden="true"></i></a>
+				<ul>
+					<li><a href="#">Técnico en Programación </a> </li>
+					<li><a href="#">Técnico en Redes </a> </li>
+					<li><a href="#">Técnico en software </a> </li>
+					<li><a href="#">técnico en informatica </a> </li>
+					<li><a href="#">Técnico en diseño gráfico </a> </li>
+				</ul>
+			 </li>
+			<li><a href="#"<i class="icono iz fa fa-hourglass" aria-hidden="true"></i>Horarios</a> </li>
 		</ul>
-		</blockquote>
-		<blockquote>Carreras Tecnicas</blockquote>
-		<blockquote>Horarios</blockquote>
-	</a>
-	</aside>
+
+
+	<section id="SeccionPrincipal">
+			<table>
+				<td class"AvisosImportantes">
+					<article id="avisos">
+					<h2 class"TituloAP"> Avisos importantes </h2>
+
+					<li class="renglonInformacion">
+						<h3 class="titulo">
+							<a href="#" class="aviso" value="100">  Inscribete a nuestros cursos, talleres y carreras</a>
+						</h3>
+						<p class="descripcion"> Encuentra los cursos de interes con los horarios ya definidos...</p>
+						<p class="descripcion"> 20 de Mayo de 2017 a las 12:00 am </p>
+					</li>
+
+					<li class="renglonInformacion">
+					<h3 class="Titulo">
+						<a href="#" class="aviso" value="099"> Platicas informativas de nuestras planes</a>
+					</h3>
+						<p class="descripcion"> Las platicas informativas para nuestros solicitantes se llevarán a cabo el dia 12 de...</p>
+						<p class="descripcion"> 12 de Mayo de 2017 a las 3:00 pm</p>
+					</li>
+
+					<li class="renglonInformacion">
+						<h3 class="titulo">
+						<a href="#" class="aviso" value="098"> Solicitud de becas de hasta el 40%</a>
+					</h3>
+						<p class="descripcion"> Ofrecemos una solicitud de descuento del 40% de manera congelada a los solicitantes que...</p>
+						<p class="descripcion"> 10 de Mayo de 2017 a las 3:00 pm</p>
+
+					</li>
+
+				<div class="control">
+					<a href="/avisos"> Ver más</a>
+				</div>
+					</article>
+				</td>
+			</table>
+
+	</section>
+
+
+
+
+
+
+
+	<section id="SeccionPrincipal">
+			<table>
+				<td class"AvisosImportantes">
+					<article id="avisos">
+					<h2 class"TituloAP"> Avisos importantes </h2>
+
+					<li class="renglonInformacion">
+						<h3 class="titulo">
+							<a href="#" class="aviso" value="100">  Inscribete a nuestros cursos, talleres y carreras</a>
+						</h3>
+						<p class="descripcion"> Encuentra los cursos de interes con los horarios ya definidos...</p>
+						<p class="descripcion"> 20 de Mayo de 2017 a las 12:00 am </p>
+					</li>
+
+					<li class="renglonInformacion">
+					<h3 class="Titulo">
+						<a href="#" class="aviso" value="099"> Platicas informativas de nuestras planes</a>
+					</h3>
+						<p class="descripcion"> Las platicas informativas para nuestros solicitantes se llevarán a cabo el dia 12 de...</p>
+						<p class="descripcion"> 12 de Mayo de 2017 a las 3:00 pm</p>
+					</li>
+
+					<li class="renglonInformacion">
+						<h3 class="titulo">
+						<a href="#" class="aviso" value="098"> Solicitud de becas de hasta el 40%</a>
+					</h3>
+						<p class="descripcion"> Ofrecemos una solicitud de descuento del 40% de manera congelada a los solicitantes que...</p>
+						<p class="descripcion"> 10 de Mayo de 2017 a las 3:00 pm</p>
+
+					</li>
+
+				<div class="control">
+					<a href="/avisos"> Ver más</a>
+				</div>
+					</article>
+				</td>
+			</table>
+
+	</section>
+
+
+
+
+
 
 	<section id="SeccionPrincipal">
 			<table>
